# kaleidoscope_parser

./: .gitignore  CMakeLists.txt  README.md
include/: ast_simplify.hpp  parse.hpp
include/kaleidoscope/parser/: ast.hpp  ast_printer.hpp  ast_simplify.hpp  config.hpp  parse.hpp  parser.hpp  parser_def.hpp
src/: CMakeLists.txt  ast_adapted.hpp  ast_printer.cpp  ast_simplify.cpp  parse.cpp  parser.cpp  parser.hpp
unittest/: CMakeLists.txt  parser_unittest.cpp
